<resources>
    <string name="app_name">MyBooks</string>
    <!-- Google Web Client ID for Firebase Authentication -->
    <string name="google_web_client_id">393895929669-i7h4es7ob2vd1tv4hcimqf5lsm1g0tsh.apps.googleusercontent.com</string>
    <string name="str_login">Login</string>
    <string name="str_email_phone">Email/Phone</string>
    <string name="str_password">Password</string>
    <string name="str_continue_as_guest">Continue as Guest</string>
    <string name="str_shelf_id_number">Shelf ID (number) *</string>
    <string name="str_title">Title *</string>
    <string name="str_description">Description</string>
    <string name="str_add">Add</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_authors_comma_separated">Authors (comma-separated)</string>
    <string name="str_publisher">Publisher</string>
    <string name="str_isbn">ISBN *</string>
    <string name="str_edition">Edition</string>
    <string name="str_page_count">Page Count</string>
    <string name="str_publish_date">Publish Date</string>
    <string name="str_owner">Owner *</string>
    <string name="str_bookshelf">Bookshelf *</string>
    <string name="str_save_book">Save Book</string>
    <string name="str_add_book">Add Book</string>
    <string name="str_test_user_name">Test User Name</string>
    <string name="str_digital_library">Digital Library</string>
    <string name="str_search">Search</string>
    <string name="str_setting">Setting</string>
    <string name="str_logout">Logout</string>
    <string name="str_home">Home</string>
    <string name="str_view_books">View Books</string>
    <string name="str_manage_books">Manage Books</string>
    <string name="str_book_shelfs">Book Shelfs</string>
    <string name="str_owners">Owners</string>
    <string name="str_title_dots">Title:</string>
    <string name="str_author">Author:</string>
    <string name="str_published_year">Published Year:</string>
    <string name="str_about_this_book">About this Book</string>
    <string name="dummy_text">Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,</string>
    <string name="str_download">Download</string>
    <string name="str_read_online">Read Online</string>
    <string name="str_add_new_book">Add New Book</string>
    <string name="str_add_new_bookshelve">Add New BookShelve</string>
    <string name="str_bookshelves">Bookshelves</string>
    <string name="str_no">No</string>
    <string name="str_logout_title">Logout</string>
    <string name="str_yes">Yes</string>
    <string name="str_delete">Delete</string>
    <string name="str_delete_description">Are you sure you want to delete?</string>
    <string name="str_delete_bookshelf">Delete BookShelf</string>
    <string name="str_are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="str_add_bookshelf">Add Bookshelf</string>
</resources>