<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/labelDesign"
        android:text="@string/str_add_book"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                style="@style/textFieldLabelDesign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_title" />

            <EditText
                android:id="@+id/title_input"
                style="@style/editTextDesign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_title"
                android:inputType="text" />


            <TextView
                style="@style/textFieldLabelDesign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/str_authors_comma_separated" />

            <EditText
                android:id="@+id/authors_input"
                style="@style/editTextDesign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_authors_comma_separated"
                android:inputType="text" />


            <TextView
                style="@style/textFieldLabelDesign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/str_publisher" />

            <EditText
                android:id="@+id/publisher_input"
                style="@style/editTextDesign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_publisher"
                android:inputType="text" />

            <TextView
                style="@style/textFieldLabelDesign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/str_isbn" />

            <EditText
                android:id="@+id/isbn_input"
                style="@style/editTextDesign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_isbn"
                android:inputType="text" />

            <TextView
                style="@style/textFieldLabelDesign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/str_edition" />

            <EditText
                android:id="@+id/edition_input"
                style="@style/editTextDesign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_edition"
                android:inputType="text" />

            <TextView
                style="@style/textFieldLabelDesign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/str_page_count" />

            <EditText
                android:id="@+id/page_count_input"
                style="@style/editTextDesign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_page_count"
                android:inputType="number" />


            <TextView
                style="@style/textFieldLabelDesign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/str_publish_date" />

            <EditText
                android:id="@+id/publish_date_input"
                style="@style/editTextDesign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableRight="@android:drawable/ic_menu_my_calendar"
                android:focusable="false"
                android:hint="@string/str_publish_date"
                android:inputType="none" />


            <TextView
                style="@style/textFieldLabelDesign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/str_owner" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_field_bg">

                <Spinner
                    android:id="@+id/owner_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="16dp"
                    android:layout_toStartOf="@+id/ivDropDownOwner"
                    android:background="@null"
                    android:minHeight="48dp"
                    android:padding="12dp" />

                <ImageView
                    android:id="@+id/ivDropDownOwner"
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_dropdown" />
            </RelativeLayout>

            <TextView
                style="@style/textFieldLabelDesign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/str_bookshelf" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_field_bg">

                <Spinner
                    android:id="@+id/bookshelf_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="16dp"
                    android:layout_toStartOf="@+id/ivDropDown"
                    android:background="@null"
                    android:minHeight="48dp"
                    android:padding="12dp" />

                <ImageView
                    android:id="@+id/ivDropDown"
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_dropdown" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/cancel_button"
            style="@style/guestButtonDesign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="@string/str_cancel"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/save_button"
            style="@style/buttonDesign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_weight="1"
            android:text="@string/str_save_book"
            android:textSize="@dimen/_12sdp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
