<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_white_bg"
        >

        <TextView
            android:id="@+id/title"
            style="@style/labelDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/str_delete_bookshelf"
            android:textColor="@color/red"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/labelDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/str_delete_description"
            android:textColor="@color/black_grey_light"
            android:textSize="@dimen/_10sdp"
            android:textStyle="normal" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">


            <TextView
                android:id="@+id/cancel_button"
                style="@style/guestButtonDesign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:text="@string/str_cancel"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/delete_btn"
                style="@style/yellowButtonDesign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_weight="1"
                android:text="@string/str_delete"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
